plugins {
    id 'java'
}

group = 'dev'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    mavenLocal()

    maven {
        url 'https://litarvan.github.io/maven'
    }

    maven {
        url 'https://repo.viaversion.com/everything/'
    }

    maven {
        name = "meteor-maven"
        url = "https://maven.meteordev.org/releases"
    }

    maven {
        url 'https://jitpack.io'
    }
}


configurations {
    implementation.extendsFrom lib
    api.extendsFrom lib
}

dependencies {
    //OpenAuth
    implementation 'fr.litarvan:openauth:1.1.3'

    // Via version
    implementation group: 'com.viaversion', name: 'viaversion', version: '4.9.0-23w45a-SNAPSHOT'
    implementation group: 'com.viaversion', name: 'viabackwards', version:'4.9.0-23w45a-SNAPSHOT'
    implementation group:'com.viaversion', name:'viarewind-common', version:'3.0.4-SNAPSHOT'
    implementation group: 'org.yaml', name: 'snakeyaml', version: '2.2'

    // Lombok
    compileOnly group:'org.projectlombok', name:'lombok', version: '1.18.30'
    annotationProcessor group:'org.projectlombok', name:'lombok', version: '1.18.30'

    // Atlas's other dependencies
    implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
    implementation group: 'org.apache.ant', name: 'ant-compress', version: '1.5'
    implementation group: 'com.github.FlorianMichael', name: 'RClasses', version: 'v2.4.0'

    // Minecraft's dependencies
    implementation fileTree('library')
}

def ENABLE_PREVIEW = "--enable-preview";

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'

    options.release = 21
    options.compilerArgs.add(ENABLE_PREVIEW)
}

tasks.withType(JavaExec).configureEach {
    jvmArgs(ENABLE_PREVIEW)
}

test {
    useJUnitPlatform()
}